app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require style
 *= require_tree .
 *= require_self
 */
@import "font-awesome-sprockets";
@import "font-awesome";
a {
    color: inherit;
    text-decoration: none;
}

a:hover, a:focus {
    color: inherit;
    text-decoration: underline;
}
body{
	font-family: "HelveticaNeue-CondensedBold", "Helvetica";
	color: #FEFEFE;
	text-shadow: 3px 3px 10px #000; 	
}
.cgp-banner-home{
	background: url(banner_home.jpg) no-repeat center center;
}
.cgp-banner-episodes{
	background: url(banner_episodes.jpg) no-repeat center center;
}
.cgp-banner-cast{
	background: url(banner_cast.jpg) no-repeat center center;
}
.cgp-banner-info{
	background: url(banner_info.jpg) no-repeat center center;
}
.cgp-hero{
	width: 100%;
	background-size: cover;
	height: 600px;
}
.custom-nav{
	height: 60px;
}
.dark-bg{
	background-color: #333;
}
.tail{
	height: auto;
	width: 100%;
	background-color: #333;
	color: #888;
}
/*START tile background css*/
.ep-tile{
	font-family: "Helvetica";
	border: solid 10px #FFF;
	height: auto;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;	
}
.cast-tile{
	height: 400px;
	width: 400px;
	border: solid 10px #FFF;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;	
}
.home-tile{
	font-family: "Helvetica";
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;	
}
.tile-austin{
	background: url(tile/tile_austin.png) no-repeat right center;
	background-size: cover;
}
.tile-chowder{
	background: url(tile/tile_chowder.png) no-repeat right center;
	background-size: cover;
}
.tile-city{
	background: url(tile/tile_city.png) no-repeat right center;
	background-size: cover;
}
.tile-colin{
	background: url(tile/tile_colin.png) no-repeat right center;
	background-size: cover;
}
.tile-eddy{
	background: url(tile/tile_eddy.png) no-repeat right center;
	background-size: cover;
}
.tile-jeff{
	background: url(tile/tile_jeff.png) no-repeat right center;
	background-size: cover;
}
.tile-keenan{
	background: url(tile/tile_keenan.png) no-repeat right center;
	background-size: cover;
}
.tile-laura{
	background: url(tile/tile_laura.png) no-repeat right center;
	background-size: cover;
}
.tile-matt{
	background: url(tile/tile_matt.png) no-repeat right center;
	background-size: cover;
}
.tile-mountain{
	background: url(tile/tile_mountain.png) no-repeat left center;
	background-size: cover;
}
.tile-pat{
	background: url(tile/tile_pat.png) no-repeat right center;
	background-size: cover;
}
/*END tile background CSS*/
.noBorder td{
	width: 50%;
	font-size: 125%;
}
.noBorder td{
	border: none !important;
}
.noBorder{
	border: none !important;
}
.impact{
	font-family: "Impact", "HelveticaNeue-CondensedBold";
	color: #FFF;
	text-shadow: 3px 3px 8px #333; 	
}
.big-text{
	font-size: 150%;
}
.logo-brand{
	height: 80px;
}
/*fixes navbar jumpiness*/
.navbar-collapse.collapse.in {
  display: block!important;
}
.spacer{
	height:20px;
}
.vbottom{
    position: relative;
    top: 100%;
    transform: translateY(-100%); 
}

